syntax = "proto3";

package example.protobuf.service;

import "example/protobuf/model/is_prime.proto";

option java_multiple_files = true;
option java_package = "com.cellpointdigital.example.protobuf.service";

service NumbersCacheService {
  rpc GetPrime(model.IsPrimeRequest) returns (NumbersCacheResponse);
  rpc StorePrime(model.IsPrimeRequest) returns (NumbersCacheResponse);
}

message NumbersCacheResponse {
  bool isCached = 1;
}